--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: php
 
 php:
+  - 4.4
+  - 5.2
+  - 5.3
   - 5.4
   - 5.5
+  - 5.6
+  - hhvm
 
-script: build.sh
+script: phpunit --ignore-configuration --coverage-text
